# rpg_svo_pro_with_digital_twins

./: README.md  rviz_on_docker.md
gps_simulator/: CMakeLists.txt  README.md  forme.txt  package.xml
gps_simulator/config/: constellation.yaml  reciever_config.yaml
gps_simulator/include/: constellation.hpp  emitter.hpp  frame_handler.hpp  gnss.hpp  receiver.hpp  satellite_param.hpp
gps_simulator/launch/: gnss_simulator.launch
gps_simulator/msg/: DoubleArrayMsg.msg  EmitterMsg.msg  IntMsg.msg
gps_simulator/scripts/: Publish_MP_NSat.py  gps_error_publisher.py
gps_simulator/src/: constellation.cpp  emitter.cpp  frame_handler.cpp  gnss.cpp  main.cpp  satellite_param.cpp
svo/: CMakeLists.txt
svo/include/svo/: frame_handler_base.h  global.h  global_pose_handler.h  global_positions_handler.h  imu_handler.h  raw_gnss_handler.h  svo.h
svo/src/: frame_handler_array.cpp  frame_handler_base.cpp  frame_handler_mono.cpp  frame_handler_stereo.cpp  global_pose_handler.cpp  global_positions_handler.cpp  imu_handler.cpp  initialization.cpp  io.cpp  pose_optimizer.cpp  raw_gnss_handler.cpp
svo_benchmarking/dataset_tools/: prepare_dataset_monocular.sh
svo_benchmarking/dataset_tools/MH_04_difficult/data/: imu.txt
svo_ceres_backend/: package.xml
svo_ceres_backend/include/svo/: ceres_backend_interface.hpp  ceres_backend_publisher.hpp
svo_ceres_backend/include/svo/ceres_backend/: estimator.hpp  estimator_impl.hpp  estimator_types.hpp  map.hpp  pose_error.hpp  pose_parameter_block.hpp  reprojection_error_impl.hpp
svo_ceres_backend/src/: ceres_backend_interface.cpp  ceres_backend_publisher.cpp  estimator.cpp  global_position_error.cpp  imu_error.cpp  map.cpp  marginalization_error.cpp  pose_error.cpp  pose_parameter_block.cpp
svo_common/include/svo/common/: frame.h  global_pose_settings.h  global_positions_settings.h  imu_calibration.h
svo_common/src/: frame.cpp
svo_direct/src/: depth_filter.cpp  feature_detection_utils.cpp
svo_img_align/src/: sparse_img_align.cpp
svo_msgs/msg/: PoseWithCloud.msg
svo_online_loopclosing/: CMakeLists.txt
svo_online_loopclosing/src/: geometric_verification.cpp
svo_registration/: CMakeLists.txt  package.xml
svo_registration/Dataset/: 0_0_Bag_conversion.py  0_1_fusing_colmaptraj.py  0_colmaptrajextraction copy.py  0_colmaptrajextraction.py  1_GMap2ply.py  2_Lidar2ENU.py  3_colmap_transform.py  4_colmap_add_GT.py  5_GPS_reading.py  6_align_stamps.py  7_VINS_pinhole.py  README.md
svo_registration/Dataset/Colmap/: Readme.md  elios2bag.py
svo_registration/Dataset/Kalibr/: README.md  elios2bag.py
svo_registration/Dataset/Kalibr/yaml/: april_6x6.yaml  imu.yaml
svo_registration/Evaluation/FM/: PlotAllTraj.py  SVO2RPG.py  VINS2RPG.py
svo_registration/Evaluation/Oerlikon/: PlotAllTraj.py  Traj2CommunFrame.py  Vins2RPGFormat.py
svo_registration/config/: FM.yaml  oerlikon.yaml
svo_registration/scripts/: online_registration.py
svo_registration/scripts/Map_Creation/: 1_obj2ply.py  README.md
svo_registration/scripts/RealWorldData/: README.md
svo_ros/: CMakeLists.txt  package.xml
svo_ros/RVIZ/: rviz_config_digital_twins.rviz
svo_ros/include/svo_ros/: backend_visualizer.h  svo_factory.h  svo_interface.h  visualizer.h
svo_ros/launch/: Oerlikon.launch
svo_ros/launch/Default/: euroc_vio_gp_mono.launch  euroc_vio_gp_stereo.launch  euroc_vio_mono_test.launch  euroc_vio_stereo.launch
svo_ros/launch/Flightmare/: flightmare_imu_frontend_mono.launch  flightmare_imu_frontend_stereo.launch  flightmare_vio_mono.launch  flightmare_vio_stereo.launch
svo_ros/param/Default/: euroc_mono.yaml  euroc_mono_test.yaml  flightmare.yaml  param_frontend_mono.yaml  param_frontend_stereo.yaml  param_vio_mono.yaml  vio_mono_flightmare.yaml  vio_mono_test.yaml
svo_ros/param/Flightmare/: VIO_mono.yaml  calibration.yaml  gp_settings.yaml  gpose_settings.yaml
svo_ros/param/Oerlikon/: calibration.yaml  gp_settings.yaml  gpose_settings.yaml  mono_vio.yaml
svo_ros/src/: backend_visualizer.cpp  ceres_backend_factory.cpp  svo_factory.cpp  svo_interface.cpp  svo_node.cpp  svo_node_base.cpp  svo_nodelet.cpp  visualizer.cpp
svo_test_utils/src/: imu_simulation.cpp
svo_tracker/src/: feature_tracking_utils.cpp
vikit/vikit_cameras/include/vikit/cameras/: atan_distortion.h  ncamera.h
vikit/vikit_cameras/src/: camera_factory.cpp  camera_yaml_serialization.cpp
vikit/vikit_ros/include/vikit/: output_helper.h
vikit/vikit_ros/src/: output_helper.cpp
